# simulaTrigo-model

./: .gitignore  CMakeLists.txt  README.md  tests.ipynb
.devcontainer/: devcontainer.json
src/model/: Coefficients.f90  Cultivar.f90  IO.f90  Meteorology.f90  Parameters.f90  Parser.f90  Program.f90  Results.f90  Simulation.f90  Utils.f90
